style.css
/* ... */
#sacLogo img:hover {
  transform: scale(1.2);
}

#firstLogo img {
  object-fit: cover;
  position: relative;
  height: 200px;
  display: block;
  margin: 40px auto 10px;
  /* border-radius: 50%; */
  margin-bottom: 16px;
  margin-top: -20px;
  transition: transform 0.5s;
  /* -webkit-tap-highlight-color: transparent; */
}

#firstLogo img:hover {
  transform: scale(1.2);
}

#userName {
    color: var(--accentColor);
    font-size: 1rem;
    font-weight: bold; 
    line-height: 1.25;
    display: block;
    font-family: var(--font);
    width: 600px;
    margin: auto;
    text-align: center;
    text-decoration: none;
}

#linksHome {
    max-width: 675px;
    width: auto;
    display: block;
    margin: 27px auto;
}
#links {
    max-width: 675px;
    width: auto;
    display: block;
    margin: 27px auto
    
}

#about {
    font-weight: 100;
    position: relative;
    color: var(--accentColor);
    line-height: 1.25;
    display: block;
    width: auto;
    padding-left: 10%;
    padding-right: 10%;
    text-align: center;
    text-decoration: none;
    font-size: 20px;
    margin:auto;
    padding-top:15px;
}

#first {
  font-weight: 100;
  position: relative;
  color: var(--accentColor);
  line-height: 1.25;
  display: block;
  width: auto;
  padding-left: 100px;
  padding-right: 100px;
  text-align: center;
  text-decoration: none;
  font-size: 20px;
  margin:auto;
  padding-top:5px;
  padding-bottom:50px;
}

/* #firstVideo1 {
  font-weight: 100;
  position: relative;
  color: var(--accentColor);
  line-height: 1.25;
  display: block;
  width: auto;
  padding-left: 100px;
  padding-right: 100px;
  text-align: center;
  text-decoration: none;
  font-size: 20px;
  margin:auto;
  padding-bottom:50px;
} */

.firstVideo {
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
  height: 0;
}

.firstVideo iframe {
  position:absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* #firstVideo2 {
  padding-left: 23%;
  padding-right: 15%;
}
.firstVideo2 {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}

.firstVideo2 iframe {
  padding-left: 25%;
  position:absolute;
  width: 100%;
  height: 100%;
} */
.game {
  width: auto; 
  height: auto;
  margin-top: 10px;
  display: block;
  margin: auto;
}


#sac {
  font-weight: 100;
  position: relative;
  color: var(--accentColor);
  line-height: 1.25;
  display: block;
  width: auto;
  padding-left: 100px;
  padding-right: 100px;
  text-align: center;
  text-decoration: none;
  font-size: 20px;
  margin:auto;
  padding-top:5px;
  padding-bottom:50px;
}

#title {
  font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
  font-weight: 100;
  position: relative;
  color: var(--accentColor);
  line-height: 1.25;
  display: block;
  width: auto;
  padding-left: 100px;
  padding-right: 100px;
  text-align: center;
  text-decoration: none;
  font-size: 30px;
  margin:auto;
  padding-bottom:50px;
}


/* #gallery {
  line-height:0;
  -webkit-column-count:5; split it into 5 columns 
  -webkit-column-gap:5px;  give it a 5px gap between columns
  -moz-column-count:5;
  -moz-column-gap:5px;
  column-count:5;
  column-gap:20px;
  margin: auto;
}

#gallery img {
  margin-left: 100px;
  margin-right: 100px;
  width: 100% !important;
  height: auto !important;
  margin-bottom:5px; to match column gap */
  /* transition: transform 2s;
}

@media (max-width: 1200px) {
  #gallery {
   -moz-column-count:    4;
   -webkit-column-count: 4;
   column-count:         4;
  }
}

@media (max-width: 1000px) {
  #gallery {
   -moz-column-count:    3;
   -webkit-column-count: 3;
   column-count:         3;
  }
}

@media (max-width: 800px) {
  #gallery {
   -moz-column-count:    2;
   -webkit-column-count: 2;
   column-count:         2;
  }
}

@media (max-width: 400px) {
  #gallery {
   -moz-column-count:    1;
   -webkit-column-count: 1;
   column-count:         1;
  }
}

#gallery img:hover {
  transform: scale(2)
}  */

.link {
    position: relative;
    background-color: transparent; 
    /* background-color: #fff8;
    backdrop-filter: blur(10px) saturate(260%) contrast(180%); 
    /* color: white; */
    color: var(--accentColor); 
    border: solid var(--accentColor) 2px;
    border-radius: 10px;
    font-size: 1rem;
    text-align: center;
    display: block;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 10px;
    padding: 10px; /* 17px */
    text-decoration: none;
    /* transition: all .25s cubic-bezier(.08, .59, .29, .99); */
    -webkit-tap-highlight-color: transparent;
}

@media (hover: hover) {
    .link:hover {
        background-color: var(--accentColor);
        color: var(--bgColor);
    }
}

.link:active {
    background-color: var(--accentColor);
    color: var(--bgColor);
}

#gif img {
    /*object-fit: cover;
    position: relative; */
   /* display: block;
    margin: 5px auto 5px;
    -webkit-tap-highlight-color: transparent; */
    width: 94px;
    height: 60px;
    object-fit: cover;
    position: relative;
    display: block;
    margin: auto;
}

.masonry {
	columns: 4;
	column-gap: 16px;
	padding-left:100px;
	padding-right:100px;
}
@media (max-width: 1200px) {
	.masonry {
		columns: 3;
   }
}
@media (max-width: 992px) {
	.masonry {
		columns: 1;
   }
}
.masonry .grid {
	display: inline-block;
	margin-bottom: 16px;
	position: relative;
	transition: transform 0.5s;
}
.masonry .grid:before {
	border-radius: 5px;
	content: '';
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background-color: rgba(0, 0, 0, .2);
}
.masonry .grid img {
	width: 100%;
	border-radius: 5px;
}
.masonry .grid:hover {
    transform: scale(1.3);
	z-index: 3;
}

.masonry .grid__title {
	font-size: 20px;
	font-weight: light;
	margin: 0px 0px 10px 0px;
}
.masonry .grid__author {
	font-size: 20px;
	font-weight: 500;
}
.masonry .grid__link {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}
/* ... */

